--- a/app/globals.css
+++ b/app/globals.css
@@ -1,10 +1,14 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+@import url("https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Triodion&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #fbfbfb;
+  --foreground: #374151;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -17,5 +21,21 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+.flex-center {
+  @apply flex items-center justify-center;
+}
+
+/* ########### home hero  lines ###### */
+
+.background-grid-style {
+  --background: #ffffff;
+  --color: rgba(0, 0, 0, 0.2);
+  --height: 5px;
+  --width: 1px;
+  --fade-stop: 90%;
+  --offset: 150px;
+  --color-dark: rgba(255, 255, 255, 0.3);
+  mask-composite: exclude;
 }
